<resources>
    <string name="app_name">Crypto Folio</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_watchlist">Watch</string>
    <string name="text_feed">Feed</string>
    <string name="text_portfolio">Portfolio</string>
    <string name="text_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search...</string>
    <string name="title_currency_list_preference">Default Currency</string>
    <string name="dialog_title_currency_list_preference">Show prices as</string>
    <string name="title_first_section">General</string>
    <string name="dialog_title_sort_list_preference">Sort order</string>
    <string name="title_sort_list_preference">Sort order</string>
    <string name="privacy_policy">\n
Last updated: February 13, 2018\n\n
Rajdeep1008 ("us", "we", or "our") operates the Crypto Watch mobile application
(the "Service").\n\n
This page informs you of our policies regarding the collection, use and
disclosure of Personal Information when you use our Service.\n\n
We will not use or share your information with anyone except as described in
this Privacy Policy.\n\n
We use your Personal Information for providing and improving the Service. By
using the Service, you agree to the collection and use of information in
accordance with this policy. Unless otherwise defined in this Privacy Policy,
terms used in this Privacy Policy have the same meanings as in our Terms and
Conditions.\n\n

Information Collection And Use\n\n

While using our Service, we may ask you to provide us with certain personally
identifiable information that can be used to contact or identify you.
Personally identifiable information may include, but is not limited to, your
email address, name, other information ("Personal Information").\n\n

We collect this information for the purpose of providing the Service,
identifying and communicating with you, responding to your requests/inquiries,
servicing your purchase orders, and improving our services.\n\n

Log Data\n\n

When you access the Service by or through a mobile device, we may collect
certain information automatically, including, but not limited to, the type of
mobile device you use, your mobile device unique ID, the IP address of your
mobile device, your mobile operating system, the type of mobile Internet
browser you use and other statistics ("Log Data").\n\n

In addition, we may use third party services such as Google Analytics that
collect, monitor and analyze this type of information in order to increase our
Service\'s functionality. These third party service providers have their own
privacy policies addressing how they use such information.\n\n

Service Providers\n\n

We may employ third party companies and individuals to facilitate our Service,
to provide the Service on our behalf, to perform Service-related services
and/or to assist us in analyzing how our Service is used.\n\n

These third parties have access to your Personal Information only to perform
specific tasks on our behalf and are obligated not to disclose or use your
information for any other purpose.\n\n

Compliance With Laws\n\n

We will disclose your Personal Information where required to do so by law or
subpoena or if we believe that such action is necessary to comply with the law
and the reasonable requests of law enforcement or to protect the security or
integrity of our Service.\n\n

Security\n\n

The security of your Personal Information is important to us, and we strive to
implement and maintain reasonable, commercially acceptable security procedures
and practices appropriate to the nature of the information we store, in order
to protect it from unauthorized access, destruction, use, modification, or
disclosure.\n\n

However, please be aware that no method of transmission over the internet, or
method of electronic storage is 100% secure and we are unable to guarantee the
absolute security of the Personal Information we have collected from you.\n\n

International Transfer\n\n

Your information, including Personal Information, may be transferred to — and
maintained on — computers located outside of your state, province, country or
other governmental jurisdiction where the data protection laws may differ than
those from your jurisdiction.\n\n

If you are located outside India and choose to provide information to
us, please note that we transfer the information, including Personal
Information, to India and process it there.\n\n

Your consent to this Privacy Policy followed by your submission of such
information represents your agreement to that transfer.\n\n

Links To Other Sites\n\n

Our Service may contain links to other sites that are not operated by us. If
you click on a third party link, you will be directed to that third party's
site. We strongly advise you to review the Privacy Policy of every site you
visit.\n\n

We have no control over, and assume no responsibility for the content, privacy
policies or practices of any third party sites or services.\n\n

Children's Privacy\n\n

Only persons age 18 or older have permission to access our Service. Our
Service does not address anyone under the age of 13 ("Children").\n\n

We do not knowingly collect personally identifiable information from children
under 13. If you are a parent or guardian and you learn that your Children
have provided us with Personal Information, please contact us. If we become
aware that we have collected Personal Information from a child under age 13
without verification of parental consent, we take steps to remove that
information from our servers.\n\n

Contact Us\n\n

If you have any questions about this Privacy Policy, please contact us.
    </string>
    <string name="github_link"><a href="https://github.com/rajdeep1008">Github</a></string>
    <string name="twitter_link"><a href="https://twitter.com/iamrajdeep1008">Twitter</a></string>
    <string name="repo_url"><a href="https://github.com/rajdeep1008/CryptoWatch">here</a></string>
</resources>