<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorites"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_black_48dp"
        android:title="@string/text_favorites" />
    <item
        android:id="@+id/action_watchlist"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_visibility_black_48dp"
        android:title="@string/text_watchlist" />
    <item
        android:id="@+id/action_feed"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_change_history_black_48dp"
        android:title="@string/text_feed" />
    <!--<item-->
        <!--android:id="@+id/action_portfolio"-->
        <!--app:showAsAction="ifRoom"-->
        <!--android:enabled="true"-->
        <!--android:icon="@drawable/ic_account_balance_wallet_black_48dp"-->
        <!--android:title="@string/text_portfolio" />-->
    <item
        android:id="@+id/action_settings"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_48dp"
        android:title="@string/text_settings" />

</menu>